# f1-notifications

./: Cargo.toml  readme.md
.forgejo/workflows/: build.yaml  build.yml
assets/: style.css
assets/js/: dash.js
docker/: Dockerfile.bot
migrations/: 001_basic_schema.sql  002_add_edits.sql  003_discord_auth.sql
src/: main.rs
src/bot/: mod.rs
src/bot/calendar/: mod.rs
src/bot/database/: mod.rs
src/bot/http/: mod.rs
src/error/: form_validation.rs  mod.rs
src/http/: mod.rs
src/http/auth/: mod.rs
src/http/html/: mod.rs
src/http/html/blocks/: add_event.rs  add_session.rs  edit_event.rs  edit_session.rs  event_list.rs  footer.rs  head.rs  header.rs  main.rs  scripts.rs  session_list.rs
src/http/message/: mod.rs
src/http/pages/: home_page.rs  sessions_page.rs
src/http/routes/: edit_event.rs  edit_session.rs
src/instrument/: mod.rs
tools/: migrate.rs  reserve-calendar-space.rs
