[package]
name = "f1-notifications"
version = "0.2.0"
edition = "2024"
default-run = "f1-notifications"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "migrate"
path = "tools/migrate.rs"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
f1-bot-types = { git = "https://codeberg.org/MTO/f1-bot-types", version = "0.2.0" }
hex = "0.4.3"
libsql = "0.9.29"
reqwest = { version = "0.13.1", features = ["json"] }
sentry = { version = "0.46.0", features = ["tower", "tower-axum-matched-path", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
