[package]
name = "f1-notifications"
version = "0.5.1"
edition = "2024"
default-run = "f1-notifications"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "migrate"
path = "tools/migrate.rs"

[[bin]]
name = "reserve-calendar-space"
path = "tools/reserve-calendar-space.rs"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
f1-bot-types = { git = "https://codeberg.org/MTO/f1-bot-types", version = "0.2.0" }
hex = "0.4.3"
libsql = "0.9.29"
rand = "0.10.0"
reqwest = { version = "0.13.1", features = ["form", "json", "multipart"] }
sentry = { version = "0.46.0", features = ["opentelemetry", "tower", "tower-axum-matched-path", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
sha2 = "0.10.9"
sha256 = "1.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.20"
uri_encode = "1.0.4"
